--- a/src/themes/day.css
+++ b/src/themes/day.css
@@ -1,14 +1,6 @@
 :root {
   color-scheme: only light;
-  --sgds-primary: #5925dc;
-  --sgds-secondary: #1f69ff;
-  --sgds-success: #0a8217;
-  --sgds-info: #0f71bb;
-  --sgds-warning: #f79009;
-  --sgds-danger: #d7260f;
-  --sgds-light: #f7f7f9;
-  --sgds-dark: #000;
-  --sgds-white: #fff;
+
   --sgds-gray-100: #f7f7f9;
   --sgds-gray-200: #e4e7ec;
   --sgds-gray-300: #d0d5dd;
@@ -90,81 +82,16 @@
   --sgds-dark-700: #1d2939;
   --sgds-dark-800: #000;
   --sgds-dark-900: #000;
-  /* --sgds-primary: #5a42c0;
-  --sgds-secondary: #006472;
-  --sgds-success: #006b00;
-  --sgds-info: #0049dc;
-  --sgds-warning: #864b00;
-  --sgds-danger: #b90000;
-  --sgds-light: #eaeaea;
-  --sgds-dark: #252525;
-  --sgds-black: #000;
+  --sgds-primary: var(--sgds-primary-500);
+  --sgds-secondary: var(--sgds-secondary-500);
+  --sgds-success: var(--sgds-success-600);
+  --sgds-info: var(--sgds-info-600);
+  --sgds-warning: var(--sgds-warning-600);
+  --sgds-danger: var(--sgds-danger-600);
+  --sgds-light: var(--sgds-gray-100);
+  --sgds-dark: #000;
   --sgds-white: #fff;
-  --sgds-gray: #595959;
-    --sgds-primary-100: #eae8ff;
-  --sgds-primary-200: #d1ceff;
-  --sgds-primary-300: #b1acff;
-  --sgds-primary-400: #080809;
-  --sgds-primary-500: #7562e2;
-  --sgds-primary-600: #5a42c0;
-  --sgds-primary-700: #42209f;
-  --sgds-primary-800: #2d007e;
-  --sgds-primary-900: #1c005e;
-  --sgds-secondary-100: #c8f1f9;
-  --sgds-secondary-200: #abd9e2;
-  --sgds-secondary-300: #85bbc5;
-  --sgds-secondary-400: #5b9da9;
-  --sgds-secondary-500: #228190;
-  --sgds-secondary-600: #006472;
-  --sgds-secondary-700: #004755;
-  --sgds-secondary-800: #002c3a;
-  --sgds-secondary-900: #001321;
-  --sgds-success-100: #c2f5bf;
-  --sgds-success-200: #a5dfa1;
-  --sgds-success-300: #7ec17a;
-  --sgds-success-400: #53a450;
-  --sgds-success-500: #088912;
-  --sgds-success-600: #006b00;
-  --sgds-success-700: #004d00;
-  --sgds-success-800: #003100;
-  --sgds-success-900: #001600;
-  --sgds-info-100: #c5f0ff;
-  --sgds-info-200: #a7d6ff;
-  --sgds-info-300: #7fb5ff;
-  --sgds-info-400: #5592ff;
-  --sgds-info-500: #216bff;
-  --sgds-info-600: #0049dc;
-  --sgds-info-700: #0022b9;
-  --sgds-info-800: #000097;
-  --sgds-info-900: #130075;
-  --sgds-warning-100: #ffe6c6;
-  --sgds-warning-200: #f3cda8;
-  --sgds-warning-300: #d7ab81;
-  --sgds-warning-400: #bc8a57;
-  --sgds-warning-500: #a5681f;
-  --sgds-warning-600: #864b00;
-  --sgds-warning-700: #672f00;
-  --sgds-warning-800: #491200;
-  --sgds-warning-900: #2d0000;
-  --sgds-danger-100: #ffdac8;
-  --sgds-danger-200: #ffbdaa;
-  --sgds-danger-300: #ff9782;
-  --sgds-danger-400: #f06e57;
-  --sgds-danger-500: #dd361c;
-  --sgds-danger-600: #b90000;
-  --sgds-danger-700: #950000;
-  --sgds-danger-800: #720000;
-  --sgds-danger-900: #4f0000;
-  --sgds-gray-100: #eaeaea;
-  --sgds-gray-200: #d2d2d2;
-  --sgds-gray-300: #b2b2b2;
-  --sgds-gray-400: #939393;
-  --sgds-gray-500: #757575;
-  --sgds-gray-600: #595959;
-  --sgds-gray-700: #3e3e3e;
-  --sgds-gray-800: #252525;
-  --sgds-gray-900: #0e0e0e; */
-
+  
   /* Alerts, Badge, Button */
   --sgds-primary-filled: var(--sgds-primary);
   --sgds-secondary-filled: var(--sgds-secondary);
@@ -221,17 +148,12 @@
   --sgds-border-radius-sm: 0.2rem;
   --sgds-border-radius-lg: 0.3rem;
   --sgds-border-radius-xl: 1rem;
-  --sgds-border-radius-xxl: 2rem;
-  --sgds-border-radius-2xl: var(--sgds-border-radius-xxl);
   --sgds-border-radius-pill: 50rem;
   --sgds-box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
   --sgds-box-shadow-sm: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075);
   --sgds-box-shadow-lg: 0 1rem 3rem rgba(0, 0, 0, 0.175);
   --sgds-box-shadow-inset: inset 0 1px 2px rgba(0, 0, 0, 0.075);
   --sgds-focus-box-shadow: 0px 0px 0px var(--sgds-focus-width) var(--sgds-info-300);
-  --sgds-focus-ring-width: 0.25rem;
-  --sgds-focus-ring-opacity: 0.25;
-  --sgds-focus-ring-color: rgba(90, 66, 192, 0.25);
   --sgds-focus-width: 0.13rem;
   --sgds-disabled-color: var(--sgds-gray-400);
   --sgds-disabled-opacity: 0.5;
