--- a/src/components/Spinner/spinner.css
+++ b/src/components/Spinner/spinner.css
@@ -3,7 +3,7 @@
   display: inline-flex;
 }
 
-:host([color="neutral"]) {
+:host([variant="neutral"]) {
   --sgds-spinner-bg: var(--sgds-neutral-color-emphasis);
 }
 
@@ -19,19 +19,10 @@
   border-radius: 50%;
   width: var(--sgds-dimension-32);
   height: var(--sgds-dimension-32);
-}
-
-.spinner-border {
-  animation: spinner-border 0.75s linear infinite;
+  animation: spinner 0.75s linear infinite;
   border: 0.25em solid var(--sgds-alternate-bg);
   border-right: 0.25em solid var(--sgds-spinner-bg);
   color: var(--sgds-spinner-color);
-}
-
-.spinner-grow {
-  animation: spinner-grow 0.75s linear infinite;
-  opacity: 0;
-  background-color: var(--sgds-spinner-bg);
 }
 
 .spinner-sm {
@@ -49,25 +40,15 @@ slot {
 }
 
 @media (prefers-reduced-motion: reduce) {
-  .spinner-border, .spinner-grow {
+  .spinner {
     animation-duration: 1.5s;
   }
 }
 
 /*! CSS Used keyframes */
-@keyframes spinner-border {
+@keyframes spinner {
   to {
     transform: rotate(1turn);
-  }
-}
-
-@keyframes spinner-grow {
-  0% {
-    transform: scale(0);
-  }
-  50% {
-    opacity: 1;
-    transform: none;
   }
 }
 
