--- a/src/themes/day.css
+++ b/src/themes/day.css
@@ -64,24 +64,6 @@
   --sgds-warning-700: #dc6803;
   --sgds-warning-800: #633a04;
   --sgds-warning-900: #311d02;
-  --sgds-light-100: #f7f7f9;
-  --sgds-light-200: #e4e7ec;
-  --sgds-light-300: #d0d5dd;
-  --sgds-light-400: #98a2b3;
-  --sgds-light-500: #667085;
-  --sgds-light-600: #344054;
-  --sgds-light-700: #1d2939;
-  --sgds-light-800: #000;
-  --sgds-light-900: #000;
-  --sgds-dark-100: #f7f7f9;
-  --sgds-dark-200: #e4e7ec;
-  --sgds-dark-300: #d0d5dd;
-  --sgds-dark-400: #98a2b3;
-  --sgds-dark-500: #667085;
-  --sgds-dark-600: #344054;
-  --sgds-dark-700: #1d2939;
-  --sgds-dark-800: #000;
-  --sgds-dark-900: #000;
   --sgds-primary: var(--sgds-primary-500);
   --sgds-secondary: var(--sgds-secondary-500);
   --sgds-success: var(--sgds-success-600);
@@ -99,7 +81,7 @@
   --sgds-info-filled: var(--sgds-info);
   --sgds-warning-filled: var(--sgds-warning);
   --sgds-danger-filled: var(--sgds-danger);
-  --sgds-light-filled: var(--sgds-light);
+  --sgds-light-filled: var(--sgds-gray-200);
   --sgds-dark-filled: var(--sgds-dark);
   --sgds-primary-text-emphasis: var(--sgds-primary);
   --sgds-secondary-text-emphasis: var(--sgds-secondary);
@@ -107,7 +89,7 @@
   --sgds-info-text-emphasis: var(--sgds-info);
   --sgds-warning-text-emphasis: var(--sgds-warning);
   --sgds-danger-text-emphasis: var(--sgds-danger);
-  --sgds-light-text-emphasis: var(--sgds-dark);
+  --sgds-light-text-emphasis: var(--sgds-gray-600);
   --sgds-dark-text-emphasis: var(--sgds-white);
   --sgds-primary-bg-subtle: var(--sgds-primary-100);
   --sgds-secondary-bg-subtle: var(--sgds-secondary-100);
@@ -136,9 +118,7 @@
   --sgds-line-height-md: 1.5;
   --sgds-line-height-lg: 2;
   --sgds-body-line-height: var(--sgds-line-height-lg);
-  --sgds-body-color: var(--sgds-dark);
-  --sgds-body-color-light: var(--sgds-gray-700);
-  --sgds-body-color-lighter: var(--sgds-gray-600);
+  --sgds-body-color: var(--sgds-gray-700);
   --sgds-body-bg: var(--sgds-white);
   --sgds-border-width: 1px;
   --sgds-border-style: solid;
@@ -173,7 +153,7 @@
   --sgds-form-border-color: var(--sgds-border-color);
   --sgds-form-label-font-weight: 700;
   --sgds-form-label-color: var(--sgds-body-color);
-  --sgds-form-hint-text-color: var(--sgds-body-color-lighter);
+  --sgds-form-hint-text-color: var(--sgds-gray-500);
   --sgds-form-hint-text-font-weight: var(--sgds-body-font-weight);
   --sgds-form-hint-text-font-size: var(--sgds-body-font-size);
   --sgds-form-focus-box-shadow: 0px 0px 0px var(--sgds-focus-width) var(--sgds-info-300);
