--- a/src/components/Badge/badge.css
+++ b/src/components/Badge/badge.css
@@ -1,72 +1,66 @@
-:host {
-  /* NEW in 2.0 */
-  --badge-color: var(--sgds-white);
-  --badge-bg: ;
-  --badge-border-color: transparent;
-}
-
-:host([variant="primary"]) {
+:host([variant="primary"]) .badge {
   --badge-bg: var(--sgds-primary-filled);
 }
-:host([variant="secondary"]) {
+:host([variant="secondary"]) .badge {
   --badge-bg: var(--sgds-secondary-filled);
 }
-:host([variant="warning"]) {
+:host([variant="warning"]) .badge{
   --badge-bg: var(--sgds-warning-filled);
-}
-:host([variant="danger"]) {
-  --badge-bg: var(--sgds-danger-filled);
-}
-:host([variant="success"]) {
-  --badge-bg: var(--sgds-success-filled);
-}
-:host([variant="info"]) {
-  --badge-bg: var(--sgds-info-filled);
-}
-:host([variant="light"]) {
-  --badge-bg: var(--sgds-light-filled);
   --badge-color: var(--sgds-dark);
 }
-:host([variant="dark"]) {
+:host([variant="danger"]) .badge{
+  --badge-bg: var(--sgds-danger-filled);
+}
+:host([variant="success"]) .badge{
+  --badge-bg: var(--sgds-success-filled);
+}
+:host([variant="info"]) .badge{
+  --badge-bg: var(--sgds-info-filled);
+}
+:host([variant="light"]) .badge{
+  --badge-bg: var(--sgds-light-filled);
+  --badge-color: var(--sgds-gray-600);
+}
+:host([variant="dark"]) .badge{
   --badge-bg: var(--sgds-dark-filled);
   
 }
-:host([variant="primary"][outlined]) {
+:host([variant="primary"][outlined]) .badge{
   --badge-color: var(--sgds-primary-text-emphasis);
   --badge-bg: var(--sgds-primary-bg-subtle);
   --badge-border-color: var(--sgds-primary-border-subtle);
 }
-:host([variant="secondary"][outlined]) {
+:host([variant="secondary"][outlined]) .badge{
   --badge-color: var(--sgds-secondary-text-emphasis);
   --badge-bg: var(--sgds-secondary-bg-subtle);
   --badge-border-color: var(--sgds-secondary-border-subtle);
 }
-:host([variant="warning"][outlined]) {
+:host([variant="warning"][outlined]) .badge{
   --badge-color: var(--sgds-warning-text-emphasis);
   --badge-bg: var(--sgds-warning-bg-subtle);
   --badge-border-color: var(--sgds-warning-border-subtle);
 }
-:host([variant="danger"][outlined]) {
+:host([variant="danger"][outlined]) .badge{
   --badge-color: var(--sgds-danger-text-emphasis);
   --badge-bg: var(--sgds-danger-bg-subtle);
   --badge-border-color: var(--sgds-danger-border-subtle);
 }
-:host([variant="success"][outlined]) {
+:host([variant="success"][outlined]) .badge{
   --badge-color: var(--sgds-success-text-emphasis);
   --badge-bg: var(--sgds-success-bg-subtle);
   --badge-border-color: var(--sgds-success-border-subtle);
 }
-:host([variant="info"][outlined]) {
+:host([variant="info"][outlined]) .badge{
   --badge-color: var(--sgds-info-text-emphasis);
   --badge-bg: var(--sgds-info-bg-subtle);
   --badge-border-color: var(--sgds-info-border-subtle);
 }
-:host([variant="light"][outlined]) {
+:host([variant="light"][outlined]) .badge{
   --badge-color: var(--sgds-light-text-emphasis);
   --badge-bg: var(--sgds-light-bg-subtle);
   --badge-border-color: var(--sgds-light-border-subtle);
 }
-:host([variant="dark"][outlined]) {
+:host([variant="dark"][outlined]) .badge{
   --badge-color: var(--sgds-dark-text-emphasis);
   --badge-bg: var(--sgds-dark-bg-subtle);
   --badge-border-color: var(--sgds-dark-border-subtle);
@@ -81,6 +75,9 @@
   --badge-border-width: var(--sgds-border-width);
   --badge-line-height: 1.145;
   --badge-icon-gap: var(--sgds-spacer-2);
+  --badge-color: var(--sgds-white);
+  --badge-bg: ;
+  --badge-border-color: transparent;
   background-color: var(--badge-bg);
   border: var(--badge-border-width) solid var(--badge-border-color);
   border-radius: var(--badge-border-radius);
