--- a/src/components/Masthead/masthead.css
+++ b/src/components/Masthead/masthead.css
@@ -12,7 +12,7 @@ b {
 }
 
 a {
-  color: #0049dc;
+  color: #2f5fd0;
   text-decoration: underline;
 }
 
@@ -77,7 +77,7 @@ a {
 
 .sgds-masthead {
   font-size: 0.875rem;
-  background-color: #eaeaea;
+  background-color: #f0f0f0;
   font-family: system-ui, -apple-system, "Segoe UI", Roboto, Arial, "Noto Sans", "Liberation Sans", sans-serif;
   color: #252525;
   @media screen and (max-width: 1023px) {
@@ -123,13 +123,13 @@ a {
 
 .sgds-masthead-button {
   display: flex;
-  color: #0049dc;
+  color: #2f5fd0;
   align-items: center;
   cursor: pointer;
 }
 
 .sgds-masthead-button:hover {
-  color: #0022b9;
+  color: #4371d6;
 }
 
 .sgds-masthead-button-text {
@@ -221,12 +221,12 @@ a {
 a.trusted-websites-link {
   display: inline-flex;
   align-items: center;
-  color: #0049dc;
+  color: #2f5fd0;
   margin-left: 0.125rem;
 }
 
 a.trusted-websites-link:hover {
-  color: #0022b9;
+  color: #4371d6;
 }
 
 @media screen and (max-width: 1023px) {
