--- a/src/themes/day.css
+++ b/src/themes/day.css
@@ -130,9 +130,6 @@
   --sgds-border-radius-xl: 1rem;
   --sgds-border-radius-pill: 50rem;
   --sgds-box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
-  --sgds-box-shadow-sm: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075);
-  --sgds-box-shadow-lg: 0 1rem 3rem rgba(0, 0, 0, 0.175);
-  --sgds-box-shadow-inset: inset 0 1px 2px rgba(0, 0, 0, 0.075);
   --sgds-focus-box-shadow: 0px 0px 0px var(--sgds-focus-width) var(--sgds-info-300);
   --sgds-focus-width: 0.13rem;
   --sgds-disabled-color: var(--sgds-gray-400);
@@ -145,26 +142,21 @@
   --sgds-link-hover-color: var(--sgds-info-700);
 
   /* Form */
-  --sgds-form-valid-color: var(--sgds-success);
   --sgds-form-invalid-color: var(--sgds-danger);
-  --sgds-form-valid-icon: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='%23006b00'%3E%3Cpath d='M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425a.247.247 0 0 1 .02-.022Z'/%3E%3C/svg%3E");
-  --sgds-form-invalid-icon: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='%23b90000'%3E%3Cpath d='M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z'/%3E%3Cpath d='M7.002 11a1 1 0 1 1 2 0 1 1 0 0 1-2 0zM7.1 4.995a.905.905 0 1 1 1.8 0l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 4.995z'/%3E%3C/svg%3E");
   --sgds-form-feedback-font-size: 0.875rem;
   --sgds-form-border-color: var(--sgds-border-color);
   --sgds-form-label-font-weight: 700;
   --sgds-form-label-color: var(--sgds-body-color);
   --sgds-form-hint-text-color: var(--sgds-gray-500);
   --sgds-form-hint-text-font-weight: var(--sgds-body-font-weight);
-  --sgds-form-hint-text-font-size: var(--sgds-body-font-size);
   --sgds-form-focus-box-shadow: 0px 0px 0px var(--sgds-focus-width) var(--sgds-info-300);
   --sgds-form-focus-invalid-box-shadow: 0px 0px 0px var(--sgds-focus-width) var(--sgds-danger-300);
-  --sgds-form-focus-valid-box-shadow: 0px 0px 0px var(--sgds-focus-width) var(--sgds-success-300);
   --sgds-form-bg: var(--sgds-body-bg);
   --sgds-form-border-width: 1px;
   --sgds-form-inline-margin-right: var(--sgds-spacer-4);
   --sgds-form-input-margin-right: var(--sgds-spacer-2);
   /* Input, Button */
-  --sgds-input-btn-padding-x: 1rem;
+  --sgds-input-btn-padding-x: var(--sgds-spacer-3);
   --sgds-input-btn-padding-y: 0.4375rem;
   /* Spacers */
   --sgds-spacer-0: 0rem;
