--- a/src/components/Checkbox/checkbox.css
+++ b/src/components/Checkbox/checkbox.css
@@ -33,7 +33,6 @@ input {
 }
 
 .form-check-input {
-  appearance: none;
   background-color: var(--sgds-form-bg);
   background-image: var(--sgds-radio-bg-image);
   background-position: 50%;
@@ -58,6 +57,14 @@ input {
 .form-check-input[checked] {
   background-color: var(--sgds-form-bg);
   border-color: var(--sgds-form-border-color);
+}
+
+.form-check-input:indeterminate,
+.form-check-input[indeterminate] {
+  background-color: var(--sgds-form-bg);
+  border-color: var(--sgds-form-border-color);
+  --sgds-radio-bg-image: url("data:image/svg+xml;charset=utf-8,%3Csvg width='32' height='32' viewBox='0%200%2032%2032' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect width='32' height='32' fill='%23E5E5E5'/%3E%3Cg clip-path='url(%23clip0_4702_10495)'%3E%3Crect width='2125' height='1029' transform='translate(-798%20-569)' fill='white'/%3E%3Cg%3E%3Cg%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M4%2016C4%2015.7348%204.10536%2015.4804%204.29289%2015.2929C4.48043%2015.1054%204.73478%2015%205%2015H27C27.2652%2015%2027.5196%2015.1054%2027.7071%2015.2929C27.8946%2015.4804%2028%2015.7348%2028%2016C28%2016.2652%2027.8946%2016.5196%2027.7071%2016.7071C27.5196%2016.8946%2027.2652%2017%2027%2017H5C4.73478%2017%204.48043%2016.8946%204.29289%2016.7071C4.10536%2016.5196%204%2016.2652%204%2016Z' fill='%230E0E0E'/%3E%3C/g%3E%3C/g%3E%3C/g%3E%3Cdefs%3E%3CclipPath id='clip0_4702_10495'%3E%3Crect width='2125' height='1029' fill='white' transform='translate(-798%20-569)'/%3E%3C/clipPath%3E%3C/defs%3E%3C/svg%3E");
+
 }
 
 .form-check-input:disabled {
@@ -85,6 +92,7 @@ input {
   margin-right: var(--sgds-form-inline-margin-right);
   margin-bottom: 0;
 }
+
 
 :host([last-of-type]) .form-check {
   margin-bottom: 0;
