--- a/src/themes/day.css
+++ b/src/themes/day.css
@@ -105,4 +105,34 @@
   /* Semantic - Link Color */
   --sgds-link-color: var(--sgds-blue-600);
   --sgds-link-color-emphasis: var(--sgds-blue-700);
+
+  /* Semantic - Form Color */
+  --sgds-form-bg: var(--sgds-gray-000);
+--sgds-form-bg-inverse: var(--sgds-gray-900);
+--sgds-form-bg-muted: var(--sgds-gray-100);
+--sgds-form-bg-subtle: var(--sgds-gray-400);
+--sgds-form-bg-emphasis: var(--sgds-gray-700);
+--sgds-form-bg-translucent: #0E0E0E0C;
+--sgds-form-bg-transparent: #FFFFFF00;
+--sgds-form-bg-on-dark: var(--sgds-gray-000);
+--sgds-form-bg-on-light: var(--sgds-gray-800);
+--sgds-form-color: var(--sgds-gray-800);
+--sgds-form-color-inverse: var(--sgds-gray-000);
+--sgds-form-color-muted: var(--sgds-gray-200);
+--sgds-form-color-subtle: var(--sgds-gray-500);
+--sgds-form-color-on-dark: var(--sgds-gray-000);
+--sgds-form-color-on-light: var(--sgds-gray-800);
+--sgds-form-primary-bg: var(--sgds-purple-600);
+--sgds-form-primary-bg-emphasis: var(--sgds-purple-700);
+--sgds-form-border-color: var(--sgds-gray-500);
+--sgds-form-border-color-muted: var(--sgds-gray-200);
+--sgds-form-border-color-emphasis: var(--sgds-gray-800);
+--sgds-form-success-bg: var(--sgds-green-600);
+--sgds-form-success-color: var(--sgds-green-600);
+--sgds-form-success-border-color: var(--sgds-green-600);
+--sgds-form-danger-bg: var(--sgds-red-600);
+--sgds-form-danger-color: var(--sgds-red-600);
+--sgds-form-danger-border-color: var(--sgds-red-600);
+
+
 }
