refactor(*): revert @open-wc/scoped-elements to v2

--- a/cypress/apps/angular-app/src/app/app.component.html
+++ b/cypress/apps/angular-app/src/app/app.component.html
@@ -1,4 +1,4 @@
-<masthead-component></masthead-component>
+<!-- <masthead-component></masthead-component> -->
 <mainnav-component></mainnav-component>
 <accordion-component></accordion-component>
 <actioncard-component></actioncard-component>
