--- a/src/components/Stepper/stepper.css
+++ b/src/components/Stepper/stepper.css
@@ -1,26 +1,22 @@
 :host {
-  --sgds-stepper-font-size: var(--sgds-body-font-size);
-  --sgds-stepper-theme-color: var(--sgds-primary);
   --sgds-stepper-theme-hover-color: var(--sgds-primary-800);
-  --sgds-stepper-inactive-theme-color: var(--sgds-gray-400);
   --sgds-stepper-detail-font-weight: 700;
 }
 
 .sgds.stepper {
   display: flex;
   flex-wrap: wrap;
-  font-size: var(--sgds-stepper-font-size);
 }
 .sgds.stepper .stepper-item {
-  flex-basis: 0;
-  flex-grow: 1;
-  margin-top: 0;
   position: relative;
-}
-.sgds.stepper .stepper-item:not(:first-child) {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: var(--sgds-gap-xs);
   flex-basis: 1em;
   flex-grow: 1;
   flex-shrink: 1;
+  margin-top: 0;
 }
 .sgds.stepper .stepper-item:not(:first-child):before {
   content: " ";
@@ -39,7 +35,7 @@
   transition: all 0.5s ease;
 }
 .sgds.stepper .stepper-item:before {
-  background: linear-gradient(270deg, var(--sgds-stepper-inactive-theme-color) 50%, var(--sgds-stepper-theme-color) 0);
+  background: linear-gradient(270deg, var(--sgds-alternate-bg) 50%, var(--sgds-default-bg-subtle) 0);
   background-position: 100% 100%;
   background-size: 200% 100%;
 }
@@ -48,48 +44,45 @@
   background-position: 0 100%;
 }
 .sgds.stepper .stepper-item.is-active .stepper-marker {
-  background-color: var(--sgds-white);
-  border-color: var(--sgds-stepper-theme-color);
-  color:  var(--sgds-stepper-theme-color);
+  background-color: var(--sgds-primary-bg);
   font-weight: 700;
+  color:  var(--sgds-default-color-on-dark);
 }
 .sgds.stepper .stepper-item.is-completed:before {
   background-position: 0 100%;
 }
 .sgds.stepper .stepper-item.is-completed .stepper-marker {
-  background-color: var(--sgds-stepper-theme-color);
-  border-color: var(--sgds-stepper-theme-color);
-  color: var(--sgds-white);
+  background-color: var(--sgds-default-bg);
+  border: var(--sgds-border-width-2) solid var(--sgds-primary-border-color);
   font-weight: 700;
+  color: var(--sgds-primary-color);
 }
 .sgds.stepper .stepper-item > .stepper-marker {
-  align-items: center;
-  background: var(--sgds-stepper-inactive-theme-color);
-  border: 0.25rem solid var(--sgds-white);
-  border-radius: 50%;
-  color: var(--sgds-white);
   display: flex;
-  font-weight: 400;
+  align-items: center;
   justify-content: center;
-  z-index: 1;
-  height: 2rem;
-  width: 2rem;
-  left: calc(50% - 1rem);
-  position: absolute;
+  background: var(--sgds-alternate-bg);
+  border: var(--sgds-border-width-2) solid var(--sgds-border-color-transparent);
+  border-radius: 50%;
+  font-weight: 400;
+  color: var(--sgds-default-color-subtle);
+  height: var(--sgds-dimension-32);
+  width: var(--sgds-dimension-32);
 }
 
 .sgds.stepper .stepper-item:not(:first-child):before {
-  bottom: 0;
-  height: 0.25rem;
-  left: -50%;
   top: 1rem;
-  width: 100%;
+  bottom: 0;
+  left: calc(-50% + 24px);
+  width: calc(100% - 48px);
+  height: 2px;
 }
 
 .sgds.stepper .stepper-item .stepper-detail {
-  margin-left: 0.5rem;
-  margin-right: 0.5rem;
-  margin-top: 2rem;
-  font-weight: var(--sgds-stepper-detail-font-weight);
   text-align: center;
+  max-width: var(--sgds-dimension-128);
+}
+
+.sgds.stepper .stepper-item.is-active .stepper-detail {
+  font-weight: var(--sgds-font-weight-semibold);
 }
