--- a/src/components/Progress/progress-bar.css
+++ b/src/components/Progress/progress-bar.css
@@ -1,50 +1,26 @@
 :host {
-  --sgds-progress-bar-color: var(--sgds-white);
-  --sgds-progress-bar-font-size: 0.75rem;
-  --sgds-progress-bar-bg: var(--sgds-primary-filled);
-  --sgds-progress-bar-transition: width 0.6s ease;
-  width: 100%;
+  --sgds-progress-bar-bg: var(--sgds-primary-bg);
 }
 
-:host([variant="secondary"]) {
-  --sgds-progress-bar-bg: var(--sgds-secondary-filled);
-}
-:host([variant="warning"]) {
-  --sgds-progress-bar-bg: var(--sgds-warning-filled);
-}
-:host([variant="danger"]) {
-  --sgds-progress-bar-bg: var(--sgds-danger-filled);
-}
-:host([variant="success"]) {
-  --sgds-progress-bar-bg: var(--sgds-success-filled);
-}
-:host([variant="info"]) {
-  --sgds-progress-bar-bg: var(--sgds-info-filled);
-}
-:host([variant="dark"]) {
-  --sgds-progress-bar-bg: var(--sgds-dark-filled);
+:host([variant="neutral"]) {
+  --sgds-progress-bar-bg: var(--sgds-default-color-emphasis);
 }
 
 progress {
   vertical-align: baseline;
 }
-/* .progress,
-.progress-stacked {
-  --sgds-progress-height: 1rem;
-  --sgds-progress-font-size: 0.75rem;
-  --sgds-progress-bg: var(--sgds-secondary-bg);
-  --sgds-progress-border-radius: var(--sgds-border-radius);
-  --sgds-progress-box-shadow: var(--sgds-box-shadow-inset);
-  --sgds-progress-bar-color: #fff;
-  --sgds-progress-bar-bg: #5942db;
-  --sgds-progress-bar-transition: width 0.6s ease;
-  background-color: var(--sgds-progress-bg);
-  border-radius: var(--sgds-progress-border-radius);
+
+.progress-container {
   display: flex;
-  font-size: var(--sgds-progress-font-size);
-  height: var(--sgds-progress-height);
+  flex-direction: column;
+  gap: var(--sgds-gap-2-xs);
   overflow: hidden;
-} */
+}
+
+.progress {
+  background-color: var(--sgds-default-bg-translucent);
+}
+
 .progress-bar {
   display: flex;
   flex-direction: column;
@@ -53,48 +29,15 @@ progress {
   text-align: center;
   white-space: nowrap;
   /* to match parent element's height */
-  font-size: var(--sgds-progress-bar-font-size);
-  color: var(--sgds-progress-bar-color);
+  font-size: var(--sgds-font-size-1);
+  color: var(--sgds-default-color);
   background-color: var(--sgds-progress-bar-bg);
-  transition: var(--sgds-progress-bar-transition);
-  height: 100%;
+  transition: width 0.6s ease;
+  height: var(--sgds-dimension-4);
 }
+
 @media (prefers-reduced-motion: reduce) {
   .progress-bar {
     transition: none;
-  }
-}
-.progress-bar-striped {
-  background-image: linear-gradient(
-    45deg,
-    hsla(0, 0%, 100%, 0.15) 25%,
-    transparent 0,
-    transparent 50%,
-    hsla(0, 0%, 100%, 0.15) 0,
-    hsla(0, 0%, 100%, 0.15) 75%,
-    transparent 0,
-    transparent
-  );
-  background-size: var(--sgds-progress-height) var(--sgds-progress-height);
-}
-/* .progress-stacked > .progress {
-  overflow: visible;
-}
-.progress-stacked > .progress > .progress-bar {
-  width: 100%;
-} */
-.progress-bar-animated {
-  animation: progress-bar-stripes 1s linear infinite;
-}
-@media (prefers-reduced-motion: reduce) {
-  .progress-bar-animated {
-    animation: none;
-  }
-}
-
-/*! CSS Used keyframes */
-@keyframes progress-bar-stripes {
-  0% {
-    background-position-x: 1rem;
   }
 }
